[package]
name = "jingo-cli"
description = "A lightweight, high-level language designed for rapid prototyping"
publish = false
version = "0.1.0"
authors = ["Owez <root@ogriffiths.com>"]
license = "MIT"
repository = "https://github.com/owez/jingo"
readme = "../README.md"
edition = "2018"

[dependencies.jingo-lib]
path = "../jingo-lib"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.'*']
opt-level = 3
codegen-units = 1
