# NOTE: This should never be published to crates.io, only `jingo-lib/`

[package]
name = "jingo"
description = "The official CLI for Jingo (code for the `./jingo [file]` program)."
version = "0.1.0"
repository = "https://github.com/scOwez/jingo"
license = "MIT"
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
colored = "1.9"
climake = "2.2"

[dependencies.jingo-lib]
path = "../jingo-lib/"
